[gd_scene load_steps=8 format=3 uid="uid://cakssivlgldhh"]

[ext_resource type="Script" uid="uid://bl18kbwnee7yn" path="res://player.gd" id="1_fvwyd"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_uxn3h"]
[ext_resource type="PackedScene" uid="uid://cmmw546mvlabr" path="res://gun.tscn" id="3_pqvuc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ual0t"]
radius = 32.0156

[sub_resource type="CircleShape2D" id="CircleShape2D_377x4"]
radius = 39.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ai3r"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_color = Color(0.207843, 0.207843, 0.207843, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ik166"]
bg_color = Color(0.8, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.207843, 0.207843, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Player" type="CharacterBody2D"]
platform_floor_layers = 0
script = ExtResource("1_fvwyd")

[node name="HappyBoo" parent="." instance=ExtResource("1_uxn3h")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ual0t")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_pqvuc")]
position = Vector2(0, -39)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_377x4")
debug_color = Color(1, 0, 0, 0.411765)

[node name="PlayerHealth" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -130.0
offset_right = 48.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0ai3r")
theme_override_styles/fill = SubResource("StyleBoxFlat_ik166")
value = 30.0
show_percentage = false
